--- a/views/ft_board.ejs
+++ b/views/ft_board.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
+<meta charset="utf-8">
 <head>
   <title>
     게시판
   </title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script src="/javascripts/ft_board.js"></script>
-  <link rel='stylesheet' href='/stylesheets/board.css' />
+  <link rel='stylesheet' href='/stylesheets/new_board.css' />
 </head>
 
 <style>
@@ -38,22 +39,21 @@
   }
 </style>
 
-<body style=" width: 1200px; height: 768px; position : relative;">
-  <div id="line_1">
-   </div>
-   <div id="first_area">
-     <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
-     <p id="first_FAQ">FAQ</p>
-     <% if(!session) { %>
-     <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
-     <% } else  {%>
-     <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
-     <% } %>
-     <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
-
-             <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
-                     메일함
-             </button>
+<body ondragstart="return false">
+  <div id="wrapper">
+    <div id="first_area">
+      <div id="div_logo">
+        <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
+      </div>
+      <div id="z">
+      </div>
+      <div id="div_login">
+        <% if(!session) { %>
+        <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
+        <% } else  {%>
+        <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
+        <% } %>
+        <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
 
              <div class = "modal" id= "MailBoxModal" style="display:none;" >
              <div class = "modal-dialog">
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-
+</div>
 </body>
 
 </html>
