--- a/views/ft_exchange_request_mail.ejs
+++ b/views/ft_exchange_request_mail.ejs
@@ -7,7 +7,19 @@
 <div class= "modal-body">
   <form>
     <div class = "form-group">
-       Recipient : <label id="recipientname" class="control-label"><%=rows[0].writer%></label>
+       수신자 : <label id="recipientname" class="control-label"><%=rows[0].writer%></label>
+       번호공개여부 : <%
+        if( rows2[0].phoneopen == '비공개')
+        {
+       %>
+       비공개
+       <%
+       }else{
+       %>
+       공개
+      <%
+       }
+       %>
     </div>
     <div class = "form-group">
       <label for="message-text" class="control-label"> 자신이 가지고 있는 과목의 이름과 교수, 시간을 적어주세요. </label>
