--- a/public/stylesheets/new_join1.css
+++ b/public/stylesheets/new_join1.css
@@ -36,7 +36,27 @@
 
   width : 300px;
 }
+#MailBoxbtn
+{
+  font-size : 15px;
+  float : right;
+  margin-left: 30px;
+  padding:1px;
+  margin-top:10px;
+  margin-right: 10px;
 
+}
+#mypage_mention
+{
+  font-size : 15px;
+  float : right;
+  margin-left: 30px;
+  padding:1px;
+  margin-top:10px;
+  margin-right: 10px;
+
+  cursor: pointer;
+}
 #first_login
 {
   font-size:15px;
@@ -177,13 +197,13 @@
 }
 #arrow1
 {
-  margin-top: 55px;
+  margin-top: 65px;
   cursor : default;
 }
 #arrow2
 {
-  margin-left: 30px;
-  margin-top: 55px;
+  margin-left: 40px;
+  margin-top: 65px;
   cursor : default;
 }
 #textarea
