--- a/public/stylesheets/new_join3.css
+++ b/public/stylesheets/new_join3.css
@@ -34,6 +34,7 @@
   width : 300px;
 }
 
+
 #first_login
 {
   font-size:15px;
@@ -42,6 +43,22 @@
   padding:1px;
   margin-top:10px;
   cursor: pointer;
+}
+#mypage_mention
+{
+  font-size : 15px;
+  float : right;
+  margin-left: 30px;
+  padding:1px;
+  margin-top:10px;
+  margin-right: 10px;
+
+  cursor: pointer;
+}
+#MailBoxbtn
+{
+  margin-top: 10px;
+  margin-left: 38px;
 }
 #first_join
 {
@@ -114,7 +131,7 @@
 
 #a
 {
-  font-size: 20px;
+ font-size: 20px;
  font-family: "NanumBarunGothic";
  color: rgb(153, 153, 153);
  line-height: 1.2;
@@ -176,13 +193,13 @@
 }
 #arrow1
 {
-  margin-top: 55px;
+  margin-top: 65px;
   cursor : default;
 }
 #arrow2
 {
-  margin-left: 30px;
-  margin-top: 55px;
+  margin-left: 40px;
+  margin-top: 65px;
   cursor : default;
 }
 #ok_mention
