--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -36,7 +36,7 @@
     </div>
     <div id="d3"><p class="p_style2">비밀번호</p>
     </div>
-    <div id="d8"><input type="password" class="a1" id="update_password">
+    <div id="d8"><input type="password" class="a1" id="update_password" placeholder = "8자리 이상 입력하세요">
     </div>
     <div id="d4"><p class="p_style2">비밀번호 확인</p>
     </div>
@@ -49,7 +49,7 @@
     </div>
     <div id="d5"><p class="p_style2">휴대전화 번호</p>
     </div>
-    <div id="d10"><input type="text" class="a1" id = "update_cellphone" >
+    <div id="d10"><input type="text" class="a1" id = "update_cellphone" placeholder = "하이픈('-') 제외하고 입력하세요">
       <form>
       <input type="radio" name="phoneradio" value= "공개" id="ok"> 공개
       <input type="radio" name="phoneradio" value= "비공개" id="not_ok"> 비공개
