--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -63,7 +63,7 @@
                         <%=oneItem.phoneopen%>
                       </p>
 
-                      <p id="change"><a href = '/first_test/updateinfo'>수정 </a></p>
+                      <p id="change"><a href = '/first_test/updatebefore'>수정 </a></p>
                       <p id="leave"><a href ='/first_test/leave1'>탈퇴</a></p>
                     </div>
                     <div id="rectangle_2_1">
@@ -109,7 +109,9 @@
                                     <%=oneItem.writer_name%>
                                   </td>
                                   <td><input type='button' value='삭제' onclick="location.href='/first_test/boarddelete/<%=oneItem.id%>'"></td>
+
                                </tr>
+
                               <%
                                 }
                               %>
@@ -183,9 +185,11 @@
                                          <div class = "modal" id= "Show_app_Modal<%=oneItem.id%>" style="display:none;">
                                          <div class = "modal-dialog">
                                            <div class = "modal-content">
+
                                            </div>
                                            </div>
                                            </div>
+
                                        <script>
                                        $('#Show_app_btn<%=oneItem.id%>').click('show.bs.modal',function(event){
                                            $('#Show_app_Modal<%=oneItem.id%>').modal({
@@ -198,6 +202,7 @@
                                          $('#Show_app_Modal<%=oneItem.id%>').on('hidden', function () {
                                              $(this).data('modal', null);
                                          });
+
                                        </script>
                           <%
                             }
@@ -263,6 +268,7 @@
                                                            </div>
                                                            </div>
                                                            </div>
+
                                                        <script>
                                                        $('#Show_post_btn<%=oneItem.id%>').click('show.bs.modal',function(event){
                                                            $('#Show_post_Modal<%=oneItem.id%>').modal({
@@ -275,6 +281,7 @@
                                                          $('#Show_post_Modal<%=oneItem.id%>').on('hidden.bs.modal', function () {
                                                              $(this).removeData('bs.modal');
                                                          });
+
                                                        </script>
                                           <%
                                             }
