--- a/views/ft_login.ejs
+++ b/views/ft_login.ejs
@@ -32,7 +32,7 @@
         </div>
       </div>
         <div id="login_button_area">
-          <input id="loginButton" type="button" value="로그인" onclick="log_in()"></input>
+          <input id="loginButton" type="button" value="로그인"></input>
         </div>
     </div>
     <div id="div_main2">
@@ -46,10 +46,10 @@
       </div>
       <div id="div_mention_button">
         <div id="div_find_id_button">
-          <input type="button" value="아이디/비밀번호 찾기" id="find_id_and_password" onclick="find_id_and_password()"></input>
+          <input type="button" value="아이디/비밀번호 찾기" id="find_id_and_password"></input>
         </div>
         <div id="div_join_button">
-            <input type="button" value="회원가입" id="login_JoinButton" onclick="join_mention()"></input>
+            <input type="button" value="회원가입" id="login_JoinButton"></input>
         </div>
       </div>
     </div>
