--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -224,3 +224,80 @@ div.tab button.active {
     border: 1px solid #ccc;
     border-top: none;
 }
+
+
+tr:nth-child(even){background-color: #f2f2f2}
+/*
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+*/
+tr:hover{
+  background: #666;
+}
+
+table.type08 {
+    border-collapse: collapse;
+    text-align: left;
+    line-height: 1.5;
+    width: 100%;
+}
+table.type08 thead th {
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    color: #369;
+    border-bottom: 3px solid #036;
+    text-align: center;
+    padding: 8px;
+}
+table.type08 tbody th {
+    width: 150px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    background: #f3f6f7;
+    text-align: center;
+    padding: 8px;
+}
+table.type08 td {
+    width: 350px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    padding: 8px;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+
+.show{
+  display : block;
+}
+
+.divider{
+  background: #f1f1f1;
+}
