--- a/views/ft_login.ejs
+++ b/views/ft_login.ejs
@@ -6,7 +6,7 @@
       <title>login_page</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src = "/javascripts/ft_login.js"></script>
-    <link rel = 'stylesheet' href='/stylesheets/new_login.css'/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/new_login.css">
   </head>
   <body ondragstart="return false">
     <div id="wrapper">
