--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -4,26 +4,30 @@
     <meta charset="utf-8">
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <title>board</title>
        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
        <script src="/javascripts/ft_main.js"></script>
   </head>
   <body ondragstart="return false">
     <div id="wrapper">
+      <p id="mention3">강의교환</p>
+      <div id="rectangle_2"></div>
       <div id="first_area">
         <div id="div_logo">
           <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
         </div>
         <div id="z">
         </div>
+        <p id="mention1">강의교환</p><div id="small_rectangle"></div>
+        <p id="mention2">버림/구함</p><div id="small_rectangle"></div>
         <div id="div_login">
           <% if(!session) { %>
           <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
           <% } else  {%>
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p><button type="button" id="MailBoxbtn" data-toggle="modal">메일함</button>
+          <p class="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;" class="mypage_mention">mypage</a></p>
           <% } %>
-          <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
 
               <div class = "modal" id= "MailBoxModal" style="display:none;" >
               <div class = "modal-dialog">
@@ -34,15 +38,15 @@
                 </div>
               </div>
     </div>
-    <ul class = "tabs" role= "tablist" id="tabs">
-      <li role = "presentation" class = "active"> <a href = "#exchange" role="tab" data-toggle = "tab"> <p id="mention1">강의교환</p><div id="small_rectangle"></div></a></li>
-      <li role = "presentation"> <a href = "#board" role="tab" data-toggle = "tab"> <p id="mention2">버림/구함</p><div id="small_rectangle"></div></a></li>
-    </ul>
-
     <div id="line_1">
     </div>
+    <div id="search_area">
+      <form id="form" action="/first_test/search/1" method="get">
+          <input type="text" name="searchText">
+          <input type="submit" class="btn" value='검색'>
+      </form>
+    </div>
     <div id="main_area">
-
                 <div class = "dropdown">
                   <button class="dropdown-toggle" type ="button" data-toggle="dropdown" onclick="clickfunction()">
                     버림/구함
@@ -79,17 +83,10 @@
                 }
                 </script>
 
-
-
-
-                <form action="/first_test/search/1" method="get">
-                    <input type="text" name="searchText">
-                    <input type="submit" class="btn" value='검색'>
-                </form>
     <div id="main_area_second">
     <div class = "tab-content">
         <div id="board" class="tab-pane">
-          <p id="mention3">버림/구함</p>
+
           <div id="rectangle_2"></div>
 
           <table class="type08">
@@ -245,8 +242,7 @@
         </div>
 
         <div id="exchange" class="tab-pane active">
-          <p id="mention3">강의교환</p>
-          <div id="rectangle_2"></div>
+
           <table class="type08">
             <thead>
               <tr>
