--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,14 +56,20 @@
   margin-right: 10px;
   cursor: pointer;
 }
-#first_mypage
+.mypage_mention
 {
   font-size:15px;
   float:right;
   margin-left: 30px;
   padding:1px;
-  margin-top:10px;
+  margin-top:4px;
   cursor: pointer;
+}
+#MailBoxbtn
+{
+  position : absolute;
+  margin-top: 10px;
+  margin-left: 50px;
 }
 #line_1
 {
@@ -133,9 +139,20 @@
 }
 #main_area
 {
+  margin-top: -100px;
   width : 1020px;
   height : 600px;
-
+}
+#search_area
+{
+  width : 1020px;
+  height : 100px;
+  display: inline-flex;
+}
+#form
+{
+  margin-top: 20px;
+  margin-left: 400px;
 }
 #main_area_second
 {
@@ -144,7 +161,6 @@
   margin-top: 65px;
   background-color: rgb(244, 244, 244);
 }
-
 
 .modal {
     display: none; /* Hidden by default */
@@ -271,8 +287,10 @@ table.type08 td {
     padding: 8px;
 }
 .dropdown {
-    position: relative;
+    position: absolute;
     display: inline-block;
+    margin-left: 300px;
+    margin-top: -44px;
 }
 
 .dropdown-content {
@@ -281,7 +299,7 @@ table.type08 td {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 11;
 }
 
 .dropdown-content a {
