--- a/public/stylesheets/new_board.css
+++ b/public/stylesheets/new_board.css
@@ -144,3 +144,36 @@
   margin-top: 65px;
   background-color: rgb(244, 244, 244);
 }
+#myModal {
+  background-color: gray;
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  display: none;
+  left: 0;
+  top: 0;
+  padding-top: 100px;
+  overflow: auto;
+}
+#MailBoxbtn
+{
+  font-size:15px;
+  float:right;
+  margin-left: 30px;
+  padding:1px;
+  margin-top:10px;
+  cursor: pointer;
+}
+.modalcontent {
+  width: 350px;
+  height: 400px;
+  background-color: white;
+  margin: 15px 456px 0px 456px;
+}
+
+td.titleButton:hover {
+  color: red;
+  cursor: pointer;
+}
