--- a/public/stylesheets/new_login.css
+++ b/public/stylesheets/new_login.css
@@ -43,6 +43,7 @@
   float:right;
   margin-left: 30px;
   padding:1px;
+  cursor: pointer;
   margin-top:10px;
 }
 #first_join
@@ -52,6 +53,7 @@
   margin-left: 30px;
   padding:1px;
   margin-top:10px;
+  cursor: pointer;
   margin-right: 10px;
 }
 #line_1
@@ -86,7 +88,7 @@
   height : 145px;
 
 }
-.input_id
+#login_email
 {
  border-width: 1px;
  border-color: rgb(153, 153, 153);
@@ -99,7 +101,7 @@
  height: 36px;
  z-index: 11;
 }
-.input_password
+#login_password
 {
   border-width: 1px;
   border-color: rgb(153, 153, 153);
@@ -118,7 +120,7 @@
   height : 290px;
 
 }
-.login_button
+#loginButton
 {
   border-radius: 7px;
     background-color: rgb(58, 74, 88);
@@ -171,7 +173,7 @@
   width : 320px;
   height : 100px;
 }
-.find_login
+#find_id_and_password
 {
   margin-top: 40px;
   border-radius: 7px;
@@ -186,7 +188,7 @@
   line-height: 1.2;
   z-index: 20;
 }
-.join_button
+#login_JoinButton
 {
   border-radius: 7px;
   background-color: rgb(58, 74, 88);
