--- a/views/ft_findID.ejs
+++ b/views/ft_findID.ejs
@@ -7,21 +7,26 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script src="/javascripts/ft_find.js"></script>
   <link rel='stylesheet' href='/stylesheets/find.css' />
+  <!--  <script type="text/javascript">
+  var cleanUri = location.protocol + '//' + location.host + location.pathname + location.hash;
+  cleanUri = encodeURIComponent(cleanUri).replace(/[!'()]/g, escape).replace(/\*/g, "%2A");
+
+ window.history.replaceState({}, document.title, cleanUri);
+</script>-->
 </head>
 
 <body>
-
   <div class="tab">
     <button class="tablinks" onclick="find(event, 'find_id')">아이디 찾기</button>
     <button class="tablinks" onclick="find(event, 'find_pwd')">비밀번호 찾기</button>
   </div>
 
-  <div id="find_id" class="tabcontent">
-<form action="/first_test/findID_success" method="get">
-  <input type='text' name='f_name' placeholder="이름을 입력하세요">
-  <input type='text' name='f_number'  placeholder='핸드폰번호를 입력하세요'>
-    <input type='submit' id='find_button' value="확인">
-</form>
+ <div id="find_id" class="tabcontent">
+<!--<form action="/first_test/findID_success" method="get">-->
+  <input type='text' name='f_name' id='f_name' placeholder="이름을 입력하세요">
+  <input type='text' name='f_number' id='f_number' placeholder='핸드폰번호를 입력하세요'>
+    <input type='button' id='find_button' value="확인">
+<!--</form>-->
 </div>
 
   <div id="find_pwd" class="tabcontent">
