--- a/views/ft_findID_success.ejs
+++ b/views/ft_findID_success.ejs
@@ -7,9 +7,16 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script src="/javascripts/ft_find.js"></script>
   <link rel='stylesheet' href='/stylesheets/board.css' />
+  <script type="text/javascript">
+  var cleanUri = location.protocol + '//' + location.host + location.pathname + location.hash;
+  cleanUri = encodeURIComponent(cleanUri).replace(/[!'()]/g, escape).replace(/\*/g, "%2A");
+
+ window.history.replaceState({}, document.title, cleanUri);
+</script>
 </head>
 <body>
 
  <h2>고객님의 아이디는 <%=result[0].email%>입니다.</h2>
+
 </body>
 </html>
