--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+        <script type="text/javascript" ></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>board</title>
        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
        <script src="/javascripts/ft_main.js"></script>
@@ -19,8 +20,14 @@
         </div>
         <div id="z">
         </div>
+        <!--
         <p id="mention1">강의교환</p><div id="small_rectangle"></div>
         <p id="mention2">버림/구함</p><div id="small_rectangle"></div>
+      -->
+        <ul class = "tabs" role= "tablist" id="tabs">
+        <li role = "presentation" class = "active"> <a href = "#exchange" role="tab" data-toggle = "tab"> <p id="mention1">강의교환</p><div id="small_rectangle"></div></a></li>
+        <li role = "presentation"> <a href = "#board" role="tab" data-toggle = "tab"> <p id="mention2">버림/구함</p><div id="small_rectangle"></div></a></li>
+      </ul>
         <div id="div_login">
           <% if(!session) { %>
           <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
@@ -38,6 +45,7 @@
                 </div>
               </div>
     </div>
+
     <div id="line_1">
     </div>
     <div id="search_area">
@@ -86,8 +94,6 @@
     <div id="main_area_second">
     <div class = "tab-content">
         <div id="board" class="tab-pane">
-
-          <div id="rectangle_2"></div>
 
           <table class="type08">
               <thead>
