main.ejs main.css routes에서 처음부분

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,6 +56,13 @@
   margin-right: 10px;
   cursor: pointer;
 }
+#change
+{
+  margin-top: -15px;
+  position: absolute;
+  margin-left: -40px;
+  width : 800px;
+}
 .mypage_mention
 {
   font-size:15px;
