--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -16,7 +16,7 @@
       <div id="rectangle_2"></div>
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
+          <p id="logo">LOGO</a></P>
         </div>
         <div id="z">
         </div>
@@ -24,10 +24,12 @@
         <p id="mention1">강의교환</p><div id="small_rectangle"></div>
         <p id="mention2">버림/구함</p><div id="small_rectangle"></div>
       -->
+      <div id="change">
         <ul class = "tabs" role= "tablist" id="tabs">
         <li role = "presentation" class = "active"> <a href = "#exchange" role="tab" data-toggle = "tab"> <p id="mention1">강의교환</p><div id="small_rectangle"></div></a></li>
         <li role = "presentation"> <a href = "#board" role="tab" data-toggle = "tab"> <p id="mention2">버림/구함</p><div id="small_rectangle"></div></a></li>
       </ul>
+    </div>
         <div id="div_login">
           <% if(!session) { %>
           <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;" >회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
