join1,2,3 ejs join.js mypage.ejs mypage.js first_test.js main.css

--- a/views/ft_join1.ejs
+++ b/views/ft_join1.ejs
@@ -6,15 +6,14 @@
     <title>join1_page</title>
     <script type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-       <link type="text/css" rel="stylesheet" href="/stylesheets/new_join1.css">
-      <script src = "/javascripts/ft_join.js"></script>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/new_join1.css">
+    <script src = "/javascripts/ft_join.js"></script>
   </head>
   <body ondragstart="return false">
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
+          <p id="logo">LOGO</a></P>
         </div>
         <div id="z">
         </div>
