--- a/views/ft_join2.ejs
+++ b/views/ft_join2.ejs
@@ -43,7 +43,7 @@
          <input type = "button" value = "가입" id="joinButton">
          <div id="first_area">
            <div id="div_logo">
-             <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
+             <p id="logo">LOGO</a></P>
            </div>
            <div id="z">
            </div>
