--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -17,7 +17,7 @@
      <div id="line_1">
         </div>
         <div id="first_area">
-          <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
+          <p id="logo">LOGO</a></P>
           <% if(!session) { %>
           <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
           <% } else  {%>
