--- a/views/ft_join3.ejs
+++ b/views/ft_join3.ejs
@@ -14,7 +14,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo"><a href = "/first_test/main/1" style="text-decoration:none;">LOGO</a></P>
+          <p id="logo">LOGO</a></P>
         </div>
         <div id="z">
         </div>
