--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,6 +56,13 @@
   margin-right: 10px;
   cursor: pointer;
 }
+#change
+{
+  margin-top: -15px;
+  position: absolute;
+  margin-left: -40px;
+  width : 800px;
+}
 .mypage_mention
 {
   font-size:15px;
@@ -242,16 +249,6 @@ div.tab button.active {
 }
 
 
-tr:nth-child(even){background-color: #f2f2f2}
-/*
-th {
-    background-color: #4CAF50;
-    color: white;
-}
-*/
-tr:hover{
-  background: #666;
-}
 
 table.type08 {
     border-collapse: collapse;
@@ -259,33 +256,31 @@ table.type08 {
     line-height: 1.5;
     width: 100%;
 }
-table.type08 thead th {
+table.type08 thead td {
     padding: 10px;
     font-weight: bold;
     vertical-align: top;
     color: #369;
+    background-color: #BEEFFF;
     border-bottom: 3px solid #036;
     text-align: center;
     padding: 8px;
 }
-table.type08 tbody th {
-    width: 150px;
-    padding: 10px;
-    font-weight: bold;
-    vertical-align: top;
-    border-bottom: 1px solid #ccc;
-    background: #f3f6f7;
-    text-align: center;
-    padding: 8px;
+
+table.type08 tbody td {
+  width: 150px;
+  padding: 10px;
+  font-weight: bold;
+  vertical-align: top;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  padding: 8px;
 }
-table.type08 td {
-    width: 350px;
-    padding: 10px;
-    vertical-align: top;
-    border-bottom: 1px solid #ccc;
-    text-align: center;
-    padding: 8px;
+tr:hover,tr:hover td {
+   background: #FDF5E6!important;
 }
+tr:nth-child(even){background-color: #FFF0F0;}
+
 .dropdown {
     position: absolute;
     display: inline-block;
