mypage.ejs new_mypage.css

--- a/public/stylesheets/new_mypage.css
+++ b/public/stylesheets/new_mypage.css
@@ -31,6 +31,12 @@
   cursor: pointer;
   margin-top: 80px;
 }
+#MailBoxbtn
+{
+  position : absolute;
+  margin-top: 10px;
+  margin-left: 130px;
+}
 #div_login
 {
   height : 170px;
