--- a/public/stylesheets/mypage.css
+++ b/public/stylesheets/mypage.css
@@ -10,6 +10,7 @@
 }
 #first_area
 {
+  display : inline-flex;
   width : 1250px;
   height : 170px;
 }
@@ -29,16 +30,12 @@
   padding:1px;
   margin-top:10px;
 }
-#first_FAQ
+#MailBoxbtn
 {
-  font-size : 15px;
-  float : right;
-  margin-left: 30px;
-  padding:1px;
-  margin-right : 10px;
-  margin-top:10px;
+  position : absolute;
+  margin-top: 10px;
+  margin-left: 50px;
 }
-
 #logo
 {
   font-size: 50px;
