--- a/views/ft_leave3.ejs
+++ b/views/ft_leave3.ejs
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
     <title>leave3_page</title>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link rel = 'stylesheet' href='/stylesheets/new_leave3.css'/>
@@ -18,7 +17,7 @@
       <input type="button" value="확인" id="ok_button">
       <div id="first_area">
         <div id="div_logo">
-           <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
+           <p id="logo">LOGO</a></P>
         </div>
         <div id="z">
         </div>
@@ -54,9 +53,9 @@
           </div>
           <div id="first_2">
             <p id="number_1">1</p> <p id="a">탈퇴안내</p>
-            <div><img id = "arrow1"src="화살표.png"></div>
+            <div><img id = "arrow1"src="/images/화살표.PNG"></div>
             <p id="number_2">2</p><p id="b">탈퇴</p>
-            <div><img id = "arrow2"src="화살표.png"></div>
+            <div><img id = "arrow2"src="/images/화살표.PNG"></div>
             <p id="number_3">3</p><p id="c">탈퇴완료</p>
           </div>
         </div>
