--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -5,6 +5,7 @@
     <title><%= title %></title>
     <script type="text/javascript" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src = "/javascripts/ft_mypage.js"></script>
     <link rel = 'stylesheet' href='/stylesheets/new_mypage.css'/><script></script>
   </head>
