--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -60,8 +60,8 @@
                         <%=oneItem.phoneopen%>
                       </p>
 
-                      <p id="change"><a href = '/first_test/updatebefore'>수정 </a></p>
-                      <p id="leave"><a href ='/first_test/leave1'>탈퇴</a></p>
+                      <p id="change"><a href = '/first_test/updatebefore' style="text-decoration:none;">수정 </a></p>
+                      <p id="leave"><a href ='/first_test/leave1' style="text-decoration:none;">탈퇴</a></p>
                     </div>
                     <div id="rectangle_2_1">
                     </div>
