--- a/public/stylesheets/new_leave1.css
+++ b/public/stylesheets/new_leave1.css
@@ -274,3 +274,12 @@ height: 40px;
   height : 23px;
   margin-left: 40px;
 }
+#update_password_before
+{
+  border-radius: 4px;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  width : 200px;
+  height : 23px;
+  margin-left: 40px;
+}
