--- a/public/stylesheets/new_mypage_revise.css
+++ b/public/stylesheets/new_mypage_revise.css
@@ -165,7 +165,7 @@
   height:50px;
   background-color: white;
   margin-left: 50px;
-  margin-top: 350px;
+  margin-top: 50px;
 }
 #d2
 {
@@ -174,7 +174,7 @@
   height:50px;
   background-color: white;
   margin-left: 50px;
-  margin-top: 400px;
+  margin-top: 100px;
 
 }#d3
 {
@@ -183,7 +183,7 @@
   height:50px;
   background-color: white;
   margin-left: 50px;
-  margin-top: 450px;
+  margin-top: 150px;
 
 }#d4
 {
@@ -192,7 +192,7 @@
   height:50px;
   background-color: white;
   margin-left: 50px;
-  margin-top: 500px;
+  margin-top: 200px;
 
 }#d5
 {
@@ -201,7 +201,7 @@
   height:50px;
   background-color: white;
   margin-left: 50px;
-  margin-top: 550px;
+  margin-top: 250px;
 
 }#d6
 {
@@ -210,7 +210,7 @@
   height:47px;
   background-color: white;
   margin-left: 200px;
-  margin-top: 350px;
+  margin-top: 50px;
   border : 2px solid white;
   background-color: rgb(244, 244, 244);
 
@@ -221,7 +221,7 @@
   height:47px;
   background-color: white;
   margin-left: 200px;
-  margin-top: 400px;
+  margin-top: 100px;
 
   border : 2px solid white;
   background-color: rgb(244, 244, 244);
@@ -233,7 +233,7 @@
   height:47px;
   background-color: white;
   margin-left: 200px;
-  margin-top: 450px;
+  margin-top: 150px;
   border : 2px solid white;
   background-color: rgb(244, 244, 244);
 
@@ -244,7 +244,7 @@
   height:47px;
   background-color: white;
   margin-left: 200px;
-  margin-top: 500px;
+  margin-top: 200px;
   border : 2px solid white;
   background-color: rgb(244, 244, 244);
 }#d10
@@ -254,7 +254,7 @@
   height:43px;
   background-color: white;
   margin-left: 200px;
-  margin-top: 550px;
+  margin-top: 250px;
   border : 2px solid white;
   background-color: rgb(244, 244, 244);
   display: inline-flex;
@@ -328,5 +328,19 @@
   margin-top: 10px;
   width: 100px;
   height: 30px;
+  z-index :22;
+}
+#updatefinButton
+{
+  font-size: 18px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  border-radius: 7px;
+  background-color: rgb(128, 175, 181);
+  position: absolute;
+  margin-left: 430px;
+  margin-top: 350px;
+  width: 149px;
+  height: 40px;
   z-index :22;
 }
