--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -22,17 +22,13 @@
     <input type="button" value="다음" id="rectangle_8_2">
       <div id="first_area">
         <div id="div_logo">
-         <p id="logo"><a href = "/first_test/main/1">LOGO</a></P>
+         <p id="logo">LOGO</a></P>
         </div>
         <div id="z">
         </div>
         <div id="div_login">
-          <% if(!session) { %>
-       <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
-       <% } else  {%>
-       <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
-       <% } %>
-       <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
+       <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
+       <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
 
                <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
                        메일함
