--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -11,7 +11,7 @@
       <div id="wrapper">
         <div id="first_area">
              <div id="div_logo">
-               <p id="logo"><a href = '/first_test/main/1'>LOGO</a></P>
+               <p id="logo">LOGO</a></P>
              </div>
              <div id="z">
              </div>
@@ -21,9 +21,7 @@
            </div>
            <div id="line_1">
            </div>
-
-
-
+           <div id="wrap">
       <div id="d1"><p class="p_style2">이메일</p>
     </div>
     <div id="d2"><p class="p_style2">닉네임</p>
@@ -57,7 +55,7 @@
       <p id="p">공개로 설정하시면 게시물을 보는<br>사람들에게 당신의 전화번호가 보여집니다.</p>
     </div>
       <input type = "button" value = "수정완료" id="updatefinButton">
-
+    </div>
     </div>
 
 </div>
