--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -22,7 +22,7 @@
         <p id="mention2">버림/구함</p><div id="small_rectangle"></div>
       -->
         <div id="div_login">
-          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p><button type="button" id="MailBoxbtn" data-toggle="modal">메일함</button>
+          <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p><img id="MailBoxbtn" src="/images/자산 3.png"></img>
               <div class = "modal" id= "MailBoxModal" style="display:none;" >
               <div class = "modal-dialog">
                 <div class = "modal-content">
