--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -29,11 +29,7 @@
         <div id="div_login">
        <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
        <p id="mypage_mention"><a href = "/first_test/mypage" style="text-decoration:none;">mypage</a></p>
-
-               <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
-                       메일함
-               </button>
-
+       <img id="MailBoxbtn" src="/images/자산 3.png"></img>
                <div class = "modal" id= "MailBoxModal" style="display:none;" >
                <div class = "modal-dialog">
                  <div class = "modal-content">
