--- a/views/ft_leave3.ejs
+++ b/views/ft_leave3.ejs
@@ -23,15 +23,9 @@
         </div>
         <div id="div_login">
           <% if(!session) { %>
-            <p id="first_join"><a href = "/first_test/join1">회원가입</a></p><p id="first_login"><a href = "/first_test/login">로그인</a></p>
-            <% } else  {%>
-            <p id="first_join"><a href = "/first_test/logout">로그아웃</a></p>
+            <p id="first_join"><a href = "/first_test/join1" style="text-decoration:none;">회원가입</a></p><p id="first_login"><a href = "/first_test/login" style="text-decoration:none;">로그인</a></p>
             <% } %>
-            <p id="mypage_mention"><a href = "/first_test/mypage">mypage</a></p>
 
-                    <button type = "button" id="MailBoxbtn" class = "mailbox-modal-btn" data-toggle="modal">
-                            메일함
-                    </button>
 
                     <div class = "modal" id= "MailBoxModal" style="display:none;" >
                     <div class = "modal-dialog">
